--- a/css/Winter/christmastree.css
+++ b/css/Winter/christmastree.css
@@ -19,20 +19,20 @@ html, body {
 	top:-10%;
 }
 
-#whitefield .left, #whitefield .right {
+#whitefield .left-field, #whitefield .right-field {
 	background:-webkit-linear-gradient(-45deg, #ffffff 0%,#f1f1f1 45%,#e1e1e1 51%,#f6f6f6 100%);
 	height:100%;
 	position:absolute;
 }
 
-#whitefield .left {
+#whitefield .left-field {
 	border-top-left-radius: 50% 8.5%;
 	border-top-right-radius: 80% 20%;
 	left:0px;
 	width:52%;
 }
 
-#whitefield .right {
+#whitefield .right-field {
 	border-top-left-radius: 150% 200%;
 	border-top-right-radius: 80% 20%;
 	right:0px;
@@ -51,11 +51,8 @@ html, body {
 }
 
 #field {
-	background: 
-				-webkit-linear-gradient(top, #f0f9ff 0%,#cbebff 20%,#a1dbff 50%, #1e5799 55%, transparent 55%, transparent 100%),
+	background: -webkit-linear-gradient(top, #f0f9ff 0%,#cbebff 20%,#a1dbff 50%, #1e5799 55%, transparent 55%, transparent 100%),
 				-webkit-radial-gradient(5% 100%, ellipse cover, #ffffff 0%,#f1f1f1 15%,#e1e1e1 31%,#f6f6f6 100%);
-				/*-webkit-linear-gradient(45deg, rgba(246,246,246,0.55) 40%,rgba(225,225,225,0.55) 35%,rgba(241,241,241,0.55) 50%,rgba(255,255,255,0.55) 100%);*/
-				/* -webkit-linear-gradient(top, transparent 0%, transparent 50%, #f3e2c7 55%,#c19e67 55%,#b68d4c 56%,#e9d4b3 100%); */
 	height: 100%;
 	max-height: 1000px;
 	overflow: hidden;
@@ -63,34 +60,10 @@ html, body {
 	width: 100%;
 	-webkit-perspective: 500px;
 }
-/*
-#field:before, #field:after {
-	content:' ';
-	background: -webkit-linear-gradient(-45deg, #ffffff 0%,#f1f1f1 45%,#e1e1e1 51%,#f6f6f6 100%);
-	position:absolute;
-	width: 52%;
-	height: 200%;
-	top: 80%;
 
-   -webkit-transform: translateZ(20px);
-}
-
-#field:before {
-	border-top-left-radius: 50% 8.5%;
-	border-top-right-radius: 80% 10%;
-	left:0px;
-}
-
-#field:after {
-	border-top-right-radius: 3% 50%;
-	border-top-left-radius: 80% 12%;
-
-	right:0px;
-}
-*/
 .tree {
 	height: 405px;
-	width: 400px;
+	width: 310px;
 	box-sizing:border-box;	
 }
 
@@ -111,7 +84,7 @@ html, body {
    border-left: 33px solid transparent;
    border-right: 33px solid transparent;
    border-bottom: 54px solid green;
-   left: 166px;
+   left: 122px;
    top: 5px;
 }
 .tree .body:before, .tree .shadow:before {
@@ -136,7 +109,7 @@ html, body {
     border-left: 133px solid transparent;
     border-right: 133px solid transparent;
    border-bottom: 173px solid green;
-    left: 66px;
+    left: 22px;
     top: 90px;
 }
 
@@ -169,7 +142,7 @@ html, body {
 	box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.6);
 	box-sizing:border-box;
 	height: 60px;
-	left:160px;
+	left:116px;
 	position:absolute;
 	bottom: 5px;
 	width:80px;
