The people are now created in JS

--- a/css/Winter/colors.css
+++ b/css/Winter/colors.css
@@ -3,7 +3,7 @@
 	background:-webkit-linear-gradient(-45deg, #959595 0%,#0d0d0d 46%,#010101 50%,#0a0a0a 53%,#4e4e4e 76%,#383838 87%,#1b1b1b 100%);
 }
 
-.fuschia-hat, .fuschia-hat:after {
+.fuchsia-hat, .fuchsia-hat:after {
 	background: -webkit-linear-gradient(top, #e570e7 0%,#c85ec7 47%,#a849a3 100%);
 }
 
