--- a/css/Winter/colors.css
+++ b/css/Winter/colors.css
@@ -24,7 +24,7 @@
 }
 
 .green-eye:after {
-	background: -webkit-radial-gradient(center, ellipse cover, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0.65) 25%,rgba(0,0,0,0) 50%,rgba(0,0,0,0) 100%) center center, -webkit-linear-gradient(-45deg, #B2D374 0%,#B6D387 50%,#98C155 75%,#93BA4A 100%) left top;
+	background: -webkit-radial-gradient(30% 30%, ellipse cover, rgba(255,255,255,0.50) 0%, rgba(255,255,255,0.50) 15%,rgba(255,255,255,0) 30%,rgba(255,255,255,0) 100%) 25% 25%, -webkit-radial-gradient(center, ellipse cover, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0.65) 40%,rgba(0,0,0,0) 50%,rgba(0,0,0,0) 100%) center center, -webkit-linear-gradient(-45deg, #B2D374 0%,#B6D387 50%,#98C155 75%,#93BA4A 100%) left top;
 }
 
 .green2-eye:after {
