--- a/css/Winter/christmastree.css
+++ b/css/Winter/christmastree.css
@@ -1,15 +1,8 @@
 
-html, body {
-	width: 100%;
-	height: 100%;
-	border: 0;
-	margin: 0;
-	overflow:hidden;
-	box-sizing:border-box;
-}
-
-.hidden {
-	visibility: hidden;
+.snowmound {
+	background:-webkit-linear-gradient(-45deg, #ffffff 0%,#f1f1f1 45%,#e1e1e1 51%,#f6f6f6 100%);
+	border-top-left-radius: 50% 8.5%;
+	border-top-right-radius: 80% 20%;
 }
 
 #whitefield {
@@ -50,9 +43,9 @@ html, body {
 	display:none;
 }
 
-#field {
-	background: -webkit-linear-gradient(top, #f0f9ff 0%,#cbebff 20%,#a1dbff 50%, #1e5799 55%, transparent 55%, transparent 100%),
-				-webkit-radial-gradient(5% 100%, ellipse cover, #ffffff 0%,#f1f1f1 15%,#e1e1e1 31%,#f6f6f6 100%);
+#scene {
+	background: center top 100% no-repeat -webkit-linear-gradient(top, #f0f9ff 0%,#cbebff 20%,#a1dbff 50%, #1e5799 55%, transparent 55%, transparent 100%),
+				center top 100% no-repeat -webkit-radial-gradient(5% 100%, ellipse cover, #ffffff 0%,#f1f1f1 15%,#e1e1e1 31%,#f6f6f6 100%);
 	height: 100%;
 	max-height: 1000px;
 	overflow: hidden;
